# cometa-prueba

./: README.md
backend/: Dockerfile  Readme.md  docker-compose.yml  prueba.md  pyproject.toml
backend/src/books/app/: exceptions.py  service.py
backend/src/books/app/use_cases/: list_genres.py  search_books.py
backend/src/books/domain/: schemas.py
backend/src/books/domain/searcher/: protocols.py  schemas.py
backend/src/books/infra/searcher/dummy/: service.py
backend/src/books/infra/searcher/nyt_books/: service.py  settings.py
backend/src/core/application/health_checkers/: base.py  dto.py
backend/src/core/domain/broker/: broker.py  schemas.py
backend/src/core/domain/database/: schemas.py
backend/src/core/infra/broker/rabbitmq/: broker.py  exception_handlers.py  health_checker.py  settings.py
backend/src/core/infra/database/redis/: service.py
backend/src/core/infra/logger/: processors.py  setup.py
backend/src/presentation/api/: main.py  settings.py
backend/src/presentation/api/commons/: exception_handlers.py  response_model.py
backend/src/presentation/api/di/: __init__.py  providers.py  stub.py
backend/src/presentation/api/resources/books/: routes.py
backend/src/presentation/api/resources/health_checkers/: response_model.py  routes.py
backend/src/presentation/consumer/: __main__.py  broker.py  settings.py
backend/src/presentation/consumer/commons/: custom_fields.py
backend/src/presentation/consumer/di/: __init__.py  providers.py  stub.py
backend/tests/unit/books/app/: test_service.py
frontend/: .gitignore  package-lock.json  (+1 more)
(+15 files in other folders)
