[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.3",
    "aioredis>=2.0.1",
    "fast-depends>=2.4.11",
    "fastapi[standard]>=0.115.2",
    "faststream>=0.5.26",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "redis>=5.1.1",
    "structlog>=24.4.0",
    "uvicorn>=0.31.1",
]
